test_case/rust-lang_rust/74566_663613705_1.rs
rust
if f == Foo { a: 0, b: 0.0 } {
//~^ ERROR: struct literals are not allowed here
}
